src/objects/RRCLease__c.object
<CustomObject>
    <fields>
        <fullName>legalDescription__c</fullName>
        <label>Legal Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>permitAcresUserOverride__c</fullName>
        <label>Permit Acres User Override</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrcLeaseNumber__c</fullName>
        <label>RRC Lease Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>texasPermitWithAcre__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Texas Permit with Acre</label>
        <referenceTo>diTexasPermitWithAcreage__c</referenceTo>
        <relationshipLabel>RRC Leases</relationshipLabel>
        <relationshipName>RRCLeases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uid__c</fullName>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RRC Lease</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRCL-{0000000000}</displayFormat>
        <label>RRC Lease Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RRC Leases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>